--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -79,7 +79,7 @@
   .portfolio .portfolio-item .portfolio-info .preview-link:hover,
   .portfolio .portfolio-item .portfolio-info .details-link:hover,
   .portfolio .portfolio-item .portfolio-info .personal-link:hover {
-    color: #ae6cc0;
+    color: #ffb727;
   }
   
   .portfolio .portfolio-item .portfolio-info .details-link,
